// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-10 h-10 align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with custom shadow color 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-10 h-10 align-middle rounded ring-0 transition-all duration-100 ring-theme-black shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with highlight 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-10 h-10 align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded ring-2 ring-theme-primary-200 dark:ring-theme-primary-600"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with highlight and custom shadow color 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-10 h-10 align-middle rounded ring-0 transition-all duration-100 ring-theme-black shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded ring-2 ring-theme-primary-200 dark:ring-theme-primary-600"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-5 h-5 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 2`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 3`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-6 h-6 text-xs align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 4`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with size 5`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-16 h-16 text-xl align-middle rounded ring-0 transition-all duration-100 ring-theme-background shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="inline-flex relative justify-center items-center w-11 h-11 text-sm align-middle rounded transition-all duration-100 shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23B6D7F8%22%2F%3E%3C%2Fsvg%3E"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;
